--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,9 @@ $RECYCLE.BIN/
 # Windows shortcuts
 *.lnk
 
+.vs/
+*.sln
+
 # =========================
 # Operating System Files
 # =========================
